[gd_scene load_steps=16 format=3 uid="uid://ddxp8f0fm0jvw"]

[ext_resource type="Texture2D" uid="uid://d3d3a5dssmbmm" path="res://sprites/items/item_spawnables/gap_animation.png" id="1_53hyk"]
[ext_resource type="Script" path="res://scripts/inventory/Gap_Umbrella.gd" id="1_utc3l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8v6nl"]
atlas = ExtResource("1_53hyk")
region = Rect2(0, 0, 9, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pxdf"]
atlas = ExtResource("1_53hyk")
region = Rect2(9, 0, 9, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkn0i"]
atlas = ExtResource("1_53hyk")
region = Rect2(0, 5, 9, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yila"]
atlas = ExtResource("1_53hyk")
region = Rect2(9, 5, 9, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_stynn"]
atlas = ExtResource("1_53hyk")
region = Rect2(0, 10, 9, 5)

[sub_resource type="SpriteFrames" id="SpriteFrames_354uu"]
animations = [{
"frames": [SubResource("AtlasTexture_8v6nl"), SubResource("AtlasTexture_5pxdf"), SubResource("AtlasTexture_dkn0i"), SubResource("AtlasTexture_2yila"), SubResource("AtlasTexture_stynn")],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Curve" id="Curve_nehy2"]
max_value = 2.0
_data = [Vector2(0, 0), 0.0, 1.90511, 0, 1, Vector2(0.524904, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.10484, 0.0, 1, 0]
point_count = 3

[sub_resource type="SpriteFrames" id="SpriteFrames_0nuxy"]
animations = [{
"frames": [SubResource("AtlasTexture_8v6nl"), SubResource("AtlasTexture_5pxdf"), SubResource("AtlasTexture_dkn0i"), SubResource("AtlasTexture_2yila"), SubResource("AtlasTexture_stynn")],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buo0d"]
size = Vector2(8, 4)

[sub_resource type="Animation" id="Animation_4d1yn"]
resource_name = "close_gap1"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/Gap1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_body/Gap1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_gbia2"]
resource_name = "close_gap2"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/Gap2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_body/Gap2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_5epn5"]
resource_name = "close_both_gaps"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/Gap2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_body/Gap2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_body/Gap1:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main_body/Gap1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jlavn"]
_data = {
"close_both_gaps": SubResource("Animation_5epn5"),
"close_gap1": SubResource("Animation_4d1yn"),
"close_gap2": SubResource("Animation_gbia2")
}

[node name="Gap_Umbrella" type="Node2D"]
texture_filter = 1
script = ExtResource("1_utc3l")

[node name="main_body" type="Node2D" parent="."]

[node name="Gap1" type="AnimatedSprite2D" parent="main_body"]
position = Vector2(30, 0)
frames = SubResource("SpriteFrames_354uu")

[node name="Particles" type="CPUParticles2D" parent="main_body/Gap1"]
position = Vector2(0, 1)
emitting = false
one_shot = true
explosiveness = 0.46
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 7.25
initial_velocity_max = 28.99
scale_amount_curve = SubResource("Curve_nehy2")
color = Color(1, 0.0117647, 1, 1)

[node name="Gap2" type="AnimatedSprite2D" parent="main_body"]
position = Vector2(120, 0)
frames = SubResource("SpriteFrames_0nuxy")

[node name="Particles" type="CPUParticles2D" parent="main_body/Gap2"]
position = Vector2(0, 1)
emitting = false
one_shot = true
explosiveness = 0.46
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 7.25
initial_velocity_max = 28.99
scale_amount_curve = SubResource("Curve_nehy2")
color = Color(1, 0.0117647, 1, 1)

[node name="Area2D" type="Area2D" parent="main_body"]
position = Vector2(30, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/Area2D"]
shape = SubResource("RectangleShape2D_buo0d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jlavn")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="animation_finished" from="main_body/Gap1" to="." method="_on_gap_1_animation_finished"]
[connection signal="animation_finished" from="main_body/Gap2" to="." method="_on_gap_2_animation_finished"]
[connection signal="body_entered" from="main_body/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
